--- a/Droid/dsymeHello.Droid.fsproj
+++ b/Droid/dsymeHello.Droid.fsproj
@@ -19,7 +19,7 @@
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <AndroidUseLatestPlatformSdk>false</AndroidUseLatestPlatformSdk>
     <FSharpTargetsPath>C:\Users\vhrd47\AppData\Local\Microsoft\VisualStudio\15.0_a4d2c22b\Extensions\123yc0rd.3on\Microsoft.FSharp.targets</FSharpTargetsPath>
-    <SelectedDevice>Zebra Technologies TC20</SelectedDevice>
+    <SelectedDevice>Android_Accelerated_x86</SelectedDevice>
     <DefaultDevice>Android_Accelerated_x86</DefaultDevice>
     <Name>dsymeHello.Droid</Name>
   </PropertyGroup>
