--- a/Droid/FsEmdkXamarinForms.Droid.fsproj
+++ b/Droid/FsEmdkXamarinForms.Droid.fsproj
@@ -8,8 +8,8 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{F2A71F9B-5D33-465A-A702-920D77279786}</ProjectTypeGuids>
     <UseStandardResourceNames>true</UseStandardResourceNames>
     <OutputType>Library</OutputType>
-    <RootNamespace>dsymeHello.Droid</RootNamespace>
-    <AssemblyName>dsymeHello.Droid</AssemblyName>
+    <RootNamespace>FsEmdkXamarinForms.Droid</RootNamespace>
+    <AssemblyName>FsEmdkXamarinForms.Droid</AssemblyName>
     <TargetFrameworkVersion>v8.1</TargetFrameworkVersion>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
@@ -32,6 +32,9 @@
     <AndroidLinkMode>None</AndroidLinkMode>
     <PlatformTarget>
     </PlatformTarget>
+    <AotAssemblies>false</AotAssemblies>
+    <EnableLLVM>false</EnableLLVM>
+    <BundleAssemblies>false</BundleAssemblies>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -183,9 +186,12 @@
     <Reference Include="Xamarin.Android.FSharp.ResourceProvider.Runtime">
       <HintPath>..\packages\Xamarin.Android.FSharp.ResourceProvider.1.0.0.25\lib\Xamarin.Android.FSharp.ResourceProvider.Runtime.dll</HintPath>
     </Reference>
-    <ProjectReference Include="../dsymeHello/dsymeHello.fsproj">
-      <Project>{5B462A0B-64AF-4850-AB27-59909D655FA8}</Project>
-      <Name>dsymeHello</Name>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\FsEmdkXamarinForms\FsEmdkXamarinForms.fsproj">
+      <Name>FsEmdkXamarinForms</Name>
+      <Project>{5b462a0b-64af-4850-ab27-59909d655fa8}</Project>
+      <Private>True</Private>
     </ProjectReference>
   </ItemGroup>
 </Project>
