--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.symbol.dsymeHello">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="com.symbol.FsEmdkXamarinForms">
   <uses-sdk android:minSdkVersion="15" />
   <uses-permission android:name="com.symbol.emdk.permission.EMDK" />
-  <application android:label="dsymeHello">
+  <application android:label="FsEmdkXamarinForms">
     <uses-library android:name="com.symbol.emdk" />
   </application>
 </manifest>
