--- a/FsEmdkXamarinForms/FsEmdkXamarinForms.fsproj
+++ b/FsEmdkXamarinForms/FsEmdkXamarinForms.fsproj
@@ -7,19 +7,14 @@
   <ItemGroup>
     <Compile Include="IDeviceConfig.fs" />
     <Compile Include="ClockApp.fs" />
-    <Compile Include="CounterApp.fs" />
     <Compile Include="AssemblyInfo.fs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Elmish.XamarinForms" Version="0.5.0" />
     <PackageReference Include="FSharp.Core" Version="4.3.3" />
     <PackageReference Include="FsPickler" Version="5.2.0" />
     <PackageReference Include="FsPickler.Json" Version="5.2.0" />
     <PackageReference Include="Xamarin.Forms" Version="3.0.0.446417" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="Elmish.XamarinForms">
-      <HintPath>..\..\Elmish.XamarinForms-master\Elmish.XamarinForms\bin\Debug\netstandard2.0\Elmish.XamarinForms.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <PackageReference Update="System.ValueTuple" Version="4.5.0-rc1" />
