now using Fabulous

--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Elmish.XamarinForms" version="0.14.6" targetFramework="monoandroid81" />
-  <package id="FSharp.Core" version="4.5.0" targetFramework="monoandroid81" />
+  <package id="Elmish.XamarinForms" version="0.17.0" targetFramework="monoandroid81" />
+  <package id="Fabulous.Core" version="0.29.0" targetFramework="monoandroid81" />
+  <package id="Fabulous.CustomControls" version="0.29.0" targetFramework="monoandroid81" />
+  <package id="FSharp.Core" version="4.5.4" targetFramework="monoandroid81" />
   <package id="FsPickler" version="5.2" targetFramework="monoandroid81" />
   <package id="FsPickler.Json" version="5.2" targetFramework="monoandroid81" />
-  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid81" />
-  <package id="Newtonsoft.Json" version="10.0.1" targetFramework="monoandroid81" />
-  <package id="Symbol.XamarinEMDK" version="2.7.0.76-rc" targetFramework="monoandroid81" />
+  <package id="Microsoft.CSharp" version="4.6.0-preview.18571.3" targetFramework="monoandroid81" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="monoandroid81" />
+  <package id="Symbol.XamarinEMDK" version="3.0.0.41" targetFramework="monoandroid81" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="monoandroid81" />
@@ -17,7 +19,7 @@
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Reflection" version="4.3.0" targetFramework="monoandroid81" />
-  <package id="System.Reflection.Emit.Lightweight" version="4.3.0" targetFramework="monoandroid81" />
+  <package id="System.Reflection.Emit.Lightweight" version="4.6.0-preview.18571.3" targetFramework="monoandroid81" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Runtime" version="4.3.0" targetFramework="monoandroid81" />
@@ -30,28 +32,28 @@
   <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Threading" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="monoandroid81" />
-  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid81" />
+  <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="monoandroid81" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Arch.Core.Common" version="1.0.0" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.0.3" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.0.3" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.FSharp.ResourceProvider" version="1.0.0.25" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="27.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Annotations" version="27.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Compat" version="27.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Core.UI" version="27.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Core.Utils" version="27.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Design" version="27.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Fragment" version="27.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Media.Compat" version="27.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Transition" version="27.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.v4" version="27.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.v7.AppCompat" version="27.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.v7.CardView" version="27.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.v7.MediaRouter" version="27.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.v7.Palette" version="27.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.v7.RecyclerView" version="27.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Android.Support.Vector.Drawable" version="27.0.2" targetFramework="monoandroid81" />
-  <package id="Xamarin.Forms" version="3.1.0.637273" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Arch.Core.Common" version="1.1.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Common" version="1.1.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Arch.Lifecycle.Runtime" version="1.1.1" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.FSharp.ResourceProvider" version="1.0.0.28" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="28.0.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Annotations" version="28.0.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Compat" version="28.0.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Core.UI" version="28.0.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Core.Utils" version="28.0.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Design" version="28.0.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Fragment" version="28.0.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Media.Compat" version="28.0.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Transition" version="28.0.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v4" version="28.0.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="28.0.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="28.0.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="28.0.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v7.Palette" version="28.0.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="28.0.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="28.0.0" targetFramework="monoandroid81" />
+  <package id="Xamarin.Forms" version="4.0.0.62955-pre2" targetFramework="monoandroid81" />
 </packages>
