--- a/Droid/FsEmdkXamarinForms.Droid - Copy.fsproj
+++ b/Droid/FsEmdkXamarinForms.Droid - Copy.fsproj
@@ -100,6 +100,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
+    <Reference Include="mscorlib" />
     <Reference Include="Mono.Android" />
     <Reference Include="Xamarin.Android.Arch.Core.Common">
       <HintPath>..\packages\Xamarin.Android.Arch.Core.Common.1.1.1\lib\monoandroid81\Xamarin.Android.Arch.Core.Common.dll</HintPath>
