--- a/FsEmdkXamarinForms/FsEmdkXamarinForms.fsproj
+++ b/FsEmdkXamarinForms/FsEmdkXamarinForms.fsproj
@@ -10,11 +10,11 @@
     <Compile Include="AssemblyInfo.fs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Elmish.XamarinForms" Version="0.14.6" />
-    <PackageReference Include="FSharp.Core" Version="4.5.0" />
+    <PackageReference Include="Fabulous.Core" Version="0.29.0" />
+    <PackageReference Include="FSharp.Core" Version="4.5.4" />
     <PackageReference Include="FsPickler" Version="5.2.0" />
     <PackageReference Include="FsPickler.Json" Version="5.2.0" />
-    <PackageReference Include="Xamarin.Forms" Version="3.1.0.637273" />
+    <PackageReference Include="Xamarin.Forms" Version="4.0.0.62955-pre2" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Update="System.ValueTuple" Version="4.5.0-rc1" />
